--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ nav a:hover {
 
 /* --- Hero Section --- */
 .hero {
-  background: url('store.jpg') center/cover no-repeat;
+  background: url('img/store.png') center/cover no-repeat;
   color: white;
   text-align: center;
   padding: 5rem 2rem;
