--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav ul li a.active {
 
 /* ===== Hero Section ===== */
 .hero {
-  background: url("images/banner.jpg") no-repeat center center/cover;
+  background: url("img/store.png") no-repeat center center/cover;
   color: white;
   text-align: center;
   padding: 100px 20px;
