--- a/style.css
+++ b/style.css
@@ -267,3 +267,64 @@ footer {
     height: 60vh;
   }
 }
+
+/* LIGHTBOX OVERLAY */
+#lightboxOverlay {
+  display: none;
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.85);
+  backdrop-filter: blur(4px);
+}
+
+#lightboxOverlay img {
+  max-width: 80%;
+  max-height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 20px #000;
+  border-radius: 10px;
+}
+
+/* CLOSE BUTTON */
+#closeLightbox {
+  position: absolute;
+  top: 25px;
+  right: 35px;
+  color: white;
+  font-size: 45px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.2s;
+}
+
+#closeLightbox:hover {
+  color: #c59d5f;
+}
+
+/* NAV ARROWS */
+.lightbox-nav {
+  position: absolute;
+  top: 50%;
+  color: white;
+  font-size: 60px;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  transform: translateY(-50%);
+  padding: 20px;
+  transition: 0.2s;
+}
+
+#lightboxPrev { left: 30px; }
+#lightboxNext { right: 30px; }
+
+.lightbox-nav:hover {
+  color: #c59d5f;
+}
